# mech-interp-for-vla-models

./: .gitignore  README.md  generate_graphs.py  main.py  pyproject.toml
reports/: REPORT.html  REPORT.md
src/: __init__.py  dataset_loader.py  environment.py  generate_graphs_from_results.py  hooks.py  hooks_patch_based.py  main.py  msae.py  sae.py  vlm_wrapper.py  world_model_probe.py
