[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "mechanistic-interpretability"
version = "0.1.0"
description = "Mechanistic interpretability for vision-language-action models: discovering and steering physical dynamics features"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GPL-3.0" }
dependencies = [
    "accelerate>=1.12.0",
    "bash>=0.6",
    "bitsandbytes>=0.49.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pybullet>=3.2.7",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[project.optional-dependencies]
openvla = [
    "timm>=0.9.10,<1.0.0",
]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
# Enable pyproject.toml as the configuration source
target-version = "py314"
line-length = 100
indent-width = 4

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    "ENV",
    "build",
    "dist",
    "*.egg-info",
    "mechanistic_interpretability",
    "checkpoints",
    "data",
    "graph_data",
    "graphs",
    "reports",
]

[tool.ruff.lint]
# Enable common rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "ARG001", # Unused function argument (common in callbacks)
    "ARG002", # Unused method argument
    "E402",  # Module level import not at top (intentional in main.py and generate_graphs.py)
    "RUF001", # String contains ambiguous characters (intentional Greek letters like σ for sigma)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending
line-ending = "auto"
